테이블뷰 화면 띄우기 - ok Todo - 줄거리 확장/축소 - 캐스트 뷰 구현

--- a/Media/Base.lproj/Main.storyboard
+++ b/Media/Base.lproj/Main.storyboard
@@ -257,7 +257,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="characterLabel" destination="NyH-LE-aQ5" id="pCt-N5-fen"/>
                                             <outlet property="nameLabel" destination="BHM-6a-bC8" id="iJH-bq-kBD"/>
+                                            <outlet property="profileImageView" destination="Sfg-qU-dIT" id="NZj-JQ-a6R"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
