--- a/Media/Base.lproj/Main.storyboard
+++ b/Media/Base.lproj/Main.storyboard
@@ -269,44 +269,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0IJ-uL-mGm">
-                                <rect key="frame" x="14" y="329" width="379" height="148"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OverviewTableViewCell" rowHeight="80" id="uno-QH-AXA" customClass="OverviewTableViewCell" customModule="Media" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="379" height="80"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uno-QH-AXA" id="bIe-Ru-qS8">
-                                            <rect key="frame" x="0.0" y="0.0" width="379" height="80"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jEH-OS-NtT">
-                                                    <rect key="frame" x="28" y="11" width="323" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TCR-zX-GUM">
-                                                    <rect key="frame" x="152" y="40" width="75" height="35"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                                                </button>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="jEH-OS-NtT" firstAttribute="top" secondItem="bIe-Ru-qS8" secondAttribute="topMargin" id="6PL-ZJ-WNx"/>
-                                                <constraint firstItem="jEH-OS-NtT" firstAttribute="leading" secondItem="bIe-Ru-qS8" secondAttribute="leadingMargin" constant="8" id="7ee-58-STT"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="jEH-OS-NtT" secondAttribute="trailing" constant="8" id="Hlp-7D-YSd"/>
-                                                <constraint firstItem="TCR-zX-GUM" firstAttribute="centerX" secondItem="bIe-Ru-qS8" secondAttribute="centerX" id="ICK-ZX-wQH"/>
-                                                <constraint firstItem="TCR-zX-GUM" firstAttribute="top" secondItem="jEH-OS-NtT" secondAttribute="bottom" constant="8" id="bwa-Bm-iCt"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="contentsLabel" destination="jEH-OS-NtT" id="E7k-Jv-sZl"/>
-                                            <outlet property="expandButton" destination="TCR-zX-GUM" id="ezb-95-ETu"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yzh-s2-pW1">
                                 <rect key="frame" x="20.000000000000007" y="103" width="112.66666666666669" height="149"/>
                                 <constraints>
@@ -319,30 +281,61 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="kUc-1n-u35">
+                                <rect key="frame" x="0.0" y="321" width="393" height="164"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OverviewTableViewCell" id="SUE-yS-ByY" customClass="OverviewTableViewCell" customModule="Media" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="21"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SUE-yS-ByY" id="KU9-MA-MvI">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AO7-Yl-AF3">
+                                                    <rect key="frame" x="20" y="0.0" width="365" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="AO7-Yl-AF3" firstAttribute="leading" secondItem="KU9-MA-MvI" secondAttribute="leading" constant="20" id="8JI-r2-hvb"/>
+                                                <constraint firstAttribute="trailing" secondItem="AO7-Yl-AF3" secondAttribute="trailing" constant="8" id="fwU-aQ-KcE"/>
+                                                <constraint firstItem="AO7-Yl-AF3" firstAttribute="top" secondItem="KU9-MA-MvI" secondAttribute="top" id="x89-w9-Lfy"/>
+                                                <constraint firstAttribute="bottom" secondItem="AO7-Yl-AF3" secondAttribute="bottom" id="z4o-Md-Av2"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contentsLabel" destination="AO7-Yl-AF3" id="Awh-ja-neH"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8Qw-8s-KHc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="kUc-1n-u35" firstAttribute="leading" secondItem="8Qw-8s-KHc" secondAttribute="leading" id="1jp-Lj-Qm7"/>
                             <constraint firstItem="2QC-bv-ANY" firstAttribute="leading" secondItem="8Qw-8s-KHc" secondAttribute="leading" constant="14" id="9gv-rw-hQO"/>
                             <constraint firstItem="8LV-Ho-gMQ" firstAttribute="leading" secondItem="8Qw-8s-KHc" secondAttribute="leading" id="Azp-j4-3Gk"/>
                             <constraint firstItem="8LV-Ho-gMQ" firstAttribute="height" secondItem="qKf-nB-F0r" secondAttribute="height" multiplier="0.25" id="BFS-IV-giy"/>
+                            <constraint firstItem="8Qw-8s-KHc" firstAttribute="trailing" secondItem="kUc-1n-u35" secondAttribute="trailing" id="CT4-hC-5Zo"/>
                             <constraint firstItem="8Qw-8s-KHc" firstAttribute="trailing" secondItem="8LV-Ho-gMQ" secondAttribute="trailing" id="I5x-hS-fYv"/>
-                            <constraint firstItem="T4w-L8-GcZ" firstAttribute="top" secondItem="0IJ-uL-mGm" secondAttribute="bottom" constant="16" id="I6r-3h-JaG"/>
                             <constraint firstItem="2cw-70-yxs" firstAttribute="top" secondItem="8LV-Ho-gMQ" secondAttribute="bottom" constant="20" id="J8S-fp-PG8"/>
                             <constraint firstItem="2cw-70-yxs" firstAttribute="leading" secondItem="T4w-L8-GcZ" secondAttribute="leading" id="KVg-jp-KWF"/>
                             <constraint firstItem="2QC-bv-ANY" firstAttribute="top" secondItem="T4w-L8-GcZ" secondAttribute="bottom" constant="8" id="Lb9-dK-2Ae"/>
                             <constraint firstItem="Yzh-s2-pW1" firstAttribute="height" secondItem="8LV-Ho-gMQ" secondAttribute="height" multiplier="0.7" id="QDg-cv-FwS"/>
+                            <constraint firstItem="kUc-1n-u35" firstAttribute="top" secondItem="2cw-70-yxs" secondAttribute="bottom" constant="8" id="Tf4-Jx-c57"/>
                             <constraint firstItem="8Qw-8s-KHc" firstAttribute="bottom" secondItem="2QC-bv-ANY" secondAttribute="bottom" id="Wn2-cf-9n6"/>
                             <constraint firstItem="2cw-70-yxs" firstAttribute="top" secondItem="Yzh-s2-pW1" secondAttribute="bottom" constant="40" id="YCY-x7-OSU"/>
                             <constraint firstItem="2cw-70-yxs" firstAttribute="leading" secondItem="8Qw-8s-KHc" secondAttribute="leading" constant="20" id="ZED-HG-qrw"/>
-                            <constraint firstItem="0IJ-uL-mGm" firstAttribute="leading" secondItem="8Qw-8s-KHc" secondAttribute="leading" constant="14" id="cVU-QG-Gm6"/>
-                            <constraint firstItem="8Qw-8s-KHc" firstAttribute="trailing" secondItem="0IJ-uL-mGm" secondAttribute="trailing" id="fg5-Eb-UhK"/>
                             <constraint firstItem="bk4-ff-KWh" firstAttribute="top" secondItem="8Qw-8s-KHc" secondAttribute="top" constant="8" id="gQF-JL-7ny"/>
                             <constraint firstAttribute="bottom" secondItem="T4w-L8-GcZ" secondAttribute="bottom" constant="338" id="hQd-MX-92E"/>
                             <constraint firstItem="bk4-ff-KWh" firstAttribute="leading" secondItem="Yzh-s2-pW1" secondAttribute="leading" id="iz0-7i-AVV"/>
-                            <constraint firstItem="0IJ-uL-mGm" firstAttribute="top" secondItem="2cw-70-yxs" secondAttribute="bottom" constant="16" id="lKH-hX-mUW"/>
                             <constraint firstItem="Yzh-s2-pW1" firstAttribute="top" secondItem="bk4-ff-KWh" secondAttribute="bottom" constant="8" id="nua-I1-Bhx"/>
                             <constraint firstItem="8LV-Ho-gMQ" firstAttribute="top" secondItem="8Qw-8s-KHc" secondAttribute="top" id="pOM-M2-WqS"/>
+                            <constraint firstItem="T4w-L8-GcZ" firstAttribute="top" secondItem="kUc-1n-u35" secondAttribute="bottom" constant="8" id="sVR-GF-NhI"/>
                             <constraint firstItem="Yzh-s2-pW1" firstAttribute="leading" secondItem="8Qw-8s-KHc" secondAttribute="leading" constant="20" id="whx-gb-PMt"/>
                             <constraint firstItem="8Qw-8s-KHc" firstAttribute="trailing" secondItem="2QC-bv-ANY" secondAttribute="trailing" id="ye6-RJ-weg"/>
                         </constraints>
@@ -352,7 +345,7 @@
                         <outlet property="castTableView" destination="2QC-bv-ANY" id="QES-k9-utt"/>
                         <outlet property="mainPosterImageView" destination="Yzh-s2-pW1" id="mNI-4c-eSu"/>
                         <outlet property="overviewLabel" destination="2cw-70-yxs" id="FX1-BI-HDt"/>
-                        <outlet property="overviewTableView" destination="0IJ-uL-mGm" id="aez-Jp-x54"/>
+                        <outlet property="overviewTableView" destination="kUc-1n-u35" id="IPf-mB-mE8"/>
                         <outlet property="posterImage" destination="8LV-Ho-gMQ" id="kUU-B8-c2p"/>
                         <outlet property="titleLabel" destination="bk4-ff-KWh" id="IGp-mb-3aP"/>
                     </connections>
